@@ -5,16 +5,12 @@ products with Zope, and it sets up a sandbox Plone site with the appropriate
 products installed.
 """
 
-from Testing import ZopeTestCase
-
 # Import PloneTestCase - this registers more products with Zope as a side effect
 from Products.PloneTestCase.PloneTestCase import PloneTestCase
 from Products.PloneTestCase.PloneTestCase import FunctionalTestCase
 from Products.PloneTestCase.PloneTestCase import setupPloneSite
-from DateTime import DateTime
 
-# Set up a Plone site - note that the portlets branch of CMFPlone applies
-# a portlets profile.
+# Set up a Plone site
 setupPloneSite()
 
 class WorkflowTestCase(PloneTestCase):
@@ -22,7 +18,7 @@ class WorkflowTestCase(PloneTestCase):
     provide specific set-up and tear-down operations, or provide convenience
     methods.
     """
-    
+
 class WorkflowFunctionalTestCase(FunctionalTestCase):
     """Base class for functional integration tests for plone.app.workflow. 
     This may provide specific set-up and tear-down operations, or provide 
@@ -30,7 +26,7 @@ class WorkflowFunctionalTestCase(FunctionalTestCase):
     """
 
     def afterSetUp(self):
-
+        self.workflow = self.portal.portal_workflow
         self.portal.acl_users._doAddUser('manager', 'secret', ['Manager',],[])
         self.portal.acl_users._doAddUser('member', 'secret', ['Member',],[])
         self.portal.acl_users._doAddUser('owner', 'secret', ['Owner',],[])
@@ -42,7 +38,6 @@ class WorkflowFunctionalTestCase(FunctionalTestCase):
         self.portal.acl_users._doAddUser('delegate_editor', 'secret', ['Member',],[])
         self.portal.acl_users._doAddUser('delegate_contributor', 'secret', ['Member',],[])
         self.portal.acl_users._doAddUser('delegate_reviewer', 'secret', ['Member',],[])
-        #self.portal.acl_users._doAddUser('delegate_manager', 'secret', ['Member',],[])
 
         self.setRoles(('Manager',))
         self.folder.invokeFactory('News Item', 'newsitem1')
@@ -54,17 +49,9 @@ class WorkflowFunctionalTestCase(FunctionalTestCase):
         self.setRoles(('Member',))
 
     def setUpDefaultWorkflow(self, defaultWorkflow=None, hasFolderSpecificWorkflow=False):
-        # XXX - TODO: we'll be able to replace this all with the new remap template
-        self.workflow = self.portal.portal_workflow
-        ctypes        = self.portal.allowedContentTypes()
-        # XXX figure out the real way to get the types
-        ctypes        = ('Document','Folder','News Item','Event',)
+        ctypes = ('Document','Folder','News Item','Event','Large Plone Folder')
 
-        for ctype in ctypes:
-            if ctype in ('Folder','Smart Folder') and hasFolderSpecificWorkflow:
-                # XXX factor in *_folder_* workflow declarations
-                self.workflow.setChainForPortalTypes(('%s' % ctype,), ('%s' % defaultWorkflow,))
-            else:
-                self.workflow.setChainForPortalTypes(('%s' % ctype,), ('%s' % defaultWorkflow,))
-
-    
+        from plone.app.workflow.remap import remap_workflow
+        remap_workflow(self.portal, 
+                       type_ids=ctypes, 
+                       chain=(defaultWorkflow,))
