@@ -2,5 +2,4 @@ import doctest
 
 # Standard options for DocTests
 optionflags =  (doctest.ELLIPSIS |
-                doctest.NORMALIZE_WHITESPACE |
-                doctest.REPORT_ONLY_FIRST_FAILURE)
+                doctest.NORMALIZE_WHITESPACE)
