@@ -39,7 +39,6 @@ setup(name='plone.app.workflow',
         'zope.i18nmessageid',
         'zope.interface',
         'zope.schema',
-        'Plone',
         'Products.CMFCore',
         'Products.DCWorkflow',
         'Products.statusmessages',
